<resources>
    <string name="app_name" translatable="false">ParkNow</string>
    <string name="menu_main_list">List</string>
    <string name="menu_main_map">Map</string>
    <string name="menu_main_more">More</string>
    <string name="main_logout">Disconnect your current User?</string>
    <string name="add_parkinglot">Add Parking Lot</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="developer_hint">Developer</string>
    <string name="developer_value" translatable="false">Mauricio Ramalho Custodio</string>
    <string name="appversion_hint">App Version</string>
    <string name="remove">Remove this parking lot from list?</string>
    <string name="removed">Removed</string>

    <!--Parking Object Fields-->
    <string name="parking_name">Parking Lot Name</string>
    <string name="parking_address">Address</string>
    <string name="parking_openat">Opens at</string>
    <string name="parking_closeat">Closes at</string>
    <string name="parking_priceperhour">Price per Hour</string>
    <string name="parking_priceperday">Price per Day</string>
    <string name="parking_pricepermonth">Price per Month</string>
    <string name="parking_description">Description</string>
    <string name="parking_phone">Contact Phone</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="share">Share</string>
    <string name="here_is_my_location">Here is my location</string>
    <string name="share_via">Share via</string>


</resources>
