<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="@dimen/about_margin"
    tools:context=".view.AboutActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/parking"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"/>

    <TextView
        style="@style/AboutText.Hint"
        android:text="@string/developer_hint"/>

    <TextView
        style="@style/AboutText.Value"
        android:text="@string/developer_value"/>

    <TextView
        style="@style/AboutText.Hint"
        android:text="@string/appversion_hint"/>

    <TextView
        android:id="@+id/text_about_version"
        style="@style/AboutText.Value"
        tools:text="1.0.0"/>

</LinearLayout>