<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/card_itempark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/text_itempark_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/parking_name" />

            <TextView
                android:id="@+id/text_itempark_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/parking_address" />

            <TextView
                android:id="@+id/text_itempark_priceperhour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/parking_priceperhour" />

            <TextView
                android:id="@+id/text_itempark_priceperday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/parking_priceperday" />

            <TextView
                android:id="@+id/text_itempark_pricepermonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/parking_pricepermonth" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

</FrameLayout>